--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,6 +1,9 @@
 ﻿{
   "profiles": {
-      "applicationUrl": "http://localhost:80"
+    "test": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "http://0.0.0.0:7678"
     }
   }
 }
